[gd_scene load_steps=5 format=3 uid="uid://game_over_scene"]

[ext_resource type="Script" path="res://scripts/GameOverScreen.gd" id="1"]
[ext_resource type="Theme" path="res://assets/ui_theme.tres" id="2"]

[sub_resource type="LabelSettings" id="1"]
font_size = 24
font_color = Color(0.2, 0.2, 0.2, 1)

[sub_resource type="StyleBoxFlat" id="2"]
bg_color = Color(1, 1, 1, 0.95)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -120.0
offset_right = 150.0
offset_bottom = 120.0
theme_override_styles/panel = SubResource("2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
alignment = 1

[node name="GameOverLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Game Over"
label_settings = SubResource("1")
horizontal_alignment = 1

[node name="FinalScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Score: 0"
horizontal_alignment = 1

[node name="NewHighScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "ðŸŽ‰ NEW HIGH SCORE!"
theme_override_colors/font_color = Color(1, 0.41, 0.41, 1)
theme_override_constants/outline_size = 0
horizontal_alignment = 1
visible = false

[node name="HighScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "High Score: 0"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "ðŸ”„ PLAY AGAIN"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "MAIN MENU"